// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardsModal components renders BonusModal correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "transparent",
      "height": "100%",
      "position": "relative",
      "width": "100%",
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "flex-end",
        "elevation": 7,
        "flexDirection": "row",
        "height": 313.5,
        "justifyContent": "center",
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="center"
      source={1}
      style={
        Array [
          Object {
            "bottom": 103.5,
            "height": 150,
            "marginHorizontal": 5,
            "opacity": 0,
            "width": 150,
          },
          Object {
            "opacity": 1,
            "tintColor": "#ccc5b9",
          },
        ]
      }
    />
    <Image
      resizeMode="center"
      source={1}
      style={
        Array [
          Object {
            "bottom": 103.5,
            "height": 150,
            "marginHorizontal": 5,
            "opacity": 0,
            "width": 150,
          },
          Object {
            "opacity": 1,
            "tintColor": "#ccc5b9",
          },
          Object {
            "height": 180,
            "width": 180,
          },
        ]
      }
    />
    <Image
      resizeMode="center"
      source={1}
      style={
        Array [
          Object {
            "bottom": 103.5,
            "height": 150,
            "marginHorizontal": 5,
            "opacity": 0,
            "width": 150,
          },
          Object {
            "opacity": 1,
            "tintColor": "#ccc5b9",
          },
        ]
      }
    />
  </Component>
  <RewardModalStars
    activities={
      Array [
        Object {
          "status": 3,
        },
      ]
    }
    currentActivity={0}
    increaseProgress={[Function]}
  />
  <Component
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#3db3e2",
        "borderRadius": 30,
        "elevation": 6,
        "flexGrow": 1,
        "marginHorizontal": 180,
        "marginVertical": 120,
        "position": "relative",
      }
    }
  >
    <withAnimatable(Text)
      animation="fadeOut"
      delay={2400}
      direction="normal"
      iterationCount={1}
      iterationDelay={0}
      onAnimationBegin={[Function]}
      onAnimationEnd={[Function]}
      onTransitionBegin={[Function]}
      onTransitionEnd={[Function]}
      style={
        Object {
          "color": "#fff",
          "fontFamily": "LinotteBold",
          "fontSize": 60,
          "marginHorizontal": 30,
          "position": "absolute",
          "textAlign": "center",
          "textShadowColor": "rgba(0, 0, 0, 0.2)",
          "textShadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "textShadowRadius": 3,
          "top": 156,
        }
      }
      useNativeDriver={false}
    >
      Rotina Completa
    </withAnimatable(Text)>
    <RewardModalExperienceBar
      progress={-1}
    />
    <Component
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "elevation": 7,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 60,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.8}
        onPress={[MockFunction]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "aspectRatio": 1,
              "borderRadius": 75,
              "elevation": 7,
              "flexDirection": "row",
              "height": 150,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#a4e76f",
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": "50%",
              "tintColor": "#fff",
              "width": "50%",
            }
          }
        />
      </TouchableOpacity>
    </Component>
    <RewardSound
      playSounds={true}
      success={true}
    />
  </Component>
</Component>
`;

exports[`RewardsModal components renders PastActivityIcons correctly 1`] = `
<Component
  style={
    Object {
      "bottom": 120,
      "position": "absolute",
    }
  }
>
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginTop": 60,
      }
    }
  >
    <Component
      key="0"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ccc5b9",
          "borderRadius": 37.5,
          "elevation": 2,
          "height": 75,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "overflow": "hidden",
          "width": 75,
        }
      }
    />
    <Component
      key="1"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ccc5b9",
          "borderRadius": 37.5,
          "elevation": 2,
          "height": 75,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "overflow": "hidden",
          "width": 75,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": "60%",
            "opacity": 0.3,
            "width": "60%",
          }
        }
      />
    </Component>
    <Component
      key="2"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ccc5b9",
          "borderRadius": 37.5,
          "elevation": 2,
          "height": 75,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "overflow": "hidden",
          "width": 75,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": "60%",
            "opacity": 0.3,
            "width": "60%",
          }
        }
      />
    </Component>
    <Component
      key="3"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ccc5b9",
          "borderRadius": 37.5,
          "elevation": 2,
          "height": 75,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "overflow": "hidden",
          "width": 75,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": "60%",
            "opacity": 0.3,
            "width": "60%",
          }
        }
      />
    </Component>
    <Component
      key="4"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ccc5b9",
          "borderRadius": 37.5,
          "elevation": 2,
          "height": 75,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "overflow": "hidden",
          "width": 75,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": "60%",
            "opacity": 0.3,
            "width": "60%",
          }
        }
      />
    </Component>
    <Component
      key="5"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ccc5b9",
          "borderRadius": 37.5,
          "elevation": 2,
          "height": 75,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "overflow": "hidden",
          "width": 75,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": "60%",
            "opacity": 0.3,
            "width": "60%",
          }
        }
      />
    </Component>
    <Component
      key="6"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ccc5b9",
          "borderRadius": 37.5,
          "elevation": 2,
          "height": 75,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "overflow": "hidden",
          "width": 75,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": "60%",
            "opacity": 0.3,
            "width": "60%",
          }
        }
      />
    </Component>
    <Component
      key="7"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ccc5b9",
          "borderRadius": 37.5,
          "elevation": 2,
          "height": 75,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "overflow": "hidden",
          "width": 75,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": "60%",
            "opacity": 0.3,
            "width": "60%",
          }
        }
      />
    </Component>
  </Component>
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginTop": 60,
        "position": "absolute",
      }
    }
  >
    <withAnimatable(Component)
      animation="zoomIn"
      delay={600}
      direction="normal"
      iterationCount={1}
      iterationDelay={0}
      key="0"
      onAnimationBegin={[Function]}
      onAnimationEnd={[Function]}
      onTransitionBegin={[Function]}
      onTransitionEnd={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 37.5,
            "elevation": 2,
            "height": 75,
            "justifyContent": "center",
            "marginHorizontal": 5,
            "opacity": 1,
            "overflow": "hidden",
            "width": 75,
          },
          Object {
            "backgroundColor": "#7d84b2",
          },
        ]
      }
      useNativeDriver={false}
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": "bedroom",
          }
        }
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </withAnimatable(Component)>
    <Component
      key="1"
      style={
        Object {
          "height": 75,
          "marginHorizontal": 5,
          "width": 75,
        }
      }
    />
    <Component
      key="2"
      style={
        Object {
          "height": 75,
          "marginHorizontal": 5,
          "width": 75,
        }
      }
    />
    <Component
      key="3"
      style={
        Object {
          "height": 75,
          "marginHorizontal": 5,
          "width": 75,
        }
      }
    />
    <Component
      key="4"
      style={
        Object {
          "height": 75,
          "marginHorizontal": 5,
          "width": 75,
        }
      }
    />
    <Component
      key="5"
      style={
        Object {
          "height": 75,
          "marginHorizontal": 5,
          "width": 75,
        }
      }
    />
    <Component
      key="6"
      style={
        Object {
          "height": 75,
          "marginHorizontal": 5,
          "width": 75,
        }
      }
    />
    <Component
      key="7"
      style={
        Object {
          "height": 75,
          "marginHorizontal": 5,
          "width": 75,
        }
      }
    />
  </Component>
</Component>
`;

exports[`RewardsModal components renders RewardModalExperienceBar correctly 1`] = `
<withAnimatable(Component)
  animation="fadeIn"
  delay={3400}
  direction="normal"
  iterationCount={1}
  iterationDelay={0}
  onAnimationBegin={[Function]}
  onAnimationEnd={[Function]}
  onTransitionBegin={[Function]}
  onTransitionEnd={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "gray",
        "borderRadius": 37.5,
        "elevation": 6,
        "height": 75,
        "overflow": "hidden",
        "position": "absolute",
        "top": 150,
        "width": 680,
      },
    ]
  }
  useNativeDriver={false}
>
  <ProgressBar
    animated={true}
    animationConfig={
      Object {
        "bounciness": 0,
      }
    }
    animationType="spring"
    borderRadius={0}
    borderWidth={0}
    color="#a4e76f"
    height={75}
    indeterminate={false}
    progress={0.5}
    useNativeDriver={false}
    width={null}
  />
  <Component
    style={
      Array [
        Object {
          "left": "25%",
        },
        Object {
          "borderRightColor": "#000",
          "borderRightWidth": 2,
          "height": 75,
          "opacity": 0.5,
          "position": "absolute",
        },
      ]
    }
  />
  <Component
    style={
      Array [
        Object {
          "left": "50%",
        },
        Object {
          "borderRightColor": "#000",
          "borderRightWidth": 2,
          "height": 75,
          "opacity": 0.5,
          "position": "absolute",
        },
      ]
    }
  />
  <Component
    style={
      Array [
        Object {
          "left": "75%",
        },
        Object {
          "borderRightColor": "#000",
          "borderRightWidth": 2,
          "height": 75,
          "opacity": 0.5,
          "position": "absolute",
        },
      ]
    }
  />
</withAnimatable(Component)>
`;

exports[`RewardsModal components renders RewardModalStars correctly 1`] = `
<Component
  style={
    Object {
      "alignItems": "flex-end",
      "elevation": 7,
      "flexDirection": "row",
      "height": 313.5,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <withAnimatable(Image)
    delay={0}
    direction="normal"
    iterationCount={1}
    iterationDelay={0}
    onAnimationBegin={[Function]}
    onAnimationEnd={[Function]}
    onTransitionBegin={[Function]}
    onTransitionEnd={[Function]}
    resizeMode="center"
    source={1}
    style={
      Object {
        "bottom": 103.5,
        "height": 150,
        "marginHorizontal": 5,
        "opacity": 0,
        "width": 150,
      }
    }
    useNativeDriver={false}
  />
  <withAnimatable(Image)
    delay={0}
    direction="normal"
    iterationCount={1}
    iterationDelay={0}
    onAnimationBegin={[Function]}
    onAnimationEnd={[Function]}
    onTransitionBegin={[Function]}
    onTransitionEnd={[Function]}
    resizeMode="center"
    source={1}
    style={
      Array [
        Object {
          "bottom": 103.5,
          "height": 150,
          "marginHorizontal": 5,
          "opacity": 0,
          "width": 150,
        },
        Object {
          "height": 180,
          "width": 180,
        },
      ]
    }
    useNativeDriver={false}
  />
  <withAnimatable(Image)
    delay={0}
    direction="normal"
    iterationCount={1}
    iterationDelay={0}
    onAnimationBegin={[Function]}
    onAnimationEnd={[Function]}
    onTransitionBegin={[Function]}
    onTransitionEnd={[Function]}
    resizeMode="center"
    source={1}
    style={
      Object {
        "bottom": 103.5,
        "height": 150,
        "marginHorizontal": 5,
        "opacity": 0,
        "width": 150,
      }
    }
    useNativeDriver={false}
  />
</Component>
`;

exports[`RewardsModal components renders RewardSound correctly 1 1`] = `""`;

exports[`RewardsModal components renders RewardSound correctly 2 1`] = `""`;

exports[`RewardsModal components renders RewardsModal correctly 1`] = `
<ModalBox
  animationDuration={400}
  backButtonClose={false}
  backdrop={true}
  backdropColor="black"
  backdropContent={null}
  backdropOpacity={0.5}
  backdropPressToClose={false}
  coverScreen={false}
  easing={[Function]}
  isOpen={true}
  keyboardTopOffset={22}
  position="center"
  startOpen={false}
  style={
    Object {
      "backgroundColor": "transparent",
      "height": "100%",
      "position": "relative",
      "width": "100%",
    }
  }
  swipeThreshold={50}
  swipeToClose={false}
>
  <Component
    style={
      Object {
        "alignItems": "flex-end",
        "elevation": 7,
        "flexDirection": "row",
        "height": 313.5,
        "justifyContent": "center",
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="center"
      source={1}
      style={
        Array [
          Object {
            "bottom": 103.5,
            "height": 150,
            "marginHorizontal": 5,
            "opacity": 0,
            "width": 150,
          },
          Object {
            "opacity": 1,
            "tintColor": "#ccc5b9",
          },
        ]
      }
    />
    <Image
      resizeMode="center"
      source={1}
      style={
        Array [
          Object {
            "bottom": 103.5,
            "height": 150,
            "marginHorizontal": 5,
            "opacity": 0,
            "width": 150,
          },
          Object {
            "opacity": 1,
            "tintColor": "#ccc5b9",
          },
          Object {
            "height": 180,
            "width": 180,
          },
        ]
      }
    />
    <Image
      resizeMode="center"
      source={1}
      style={
        Array [
          Object {
            "bottom": 103.5,
            "height": 150,
            "marginHorizontal": 5,
            "opacity": 0,
            "width": 150,
          },
          Object {
            "opacity": 1,
            "tintColor": "#ccc5b9",
          },
        ]
      }
    />
  </Component>
  <RewardModalStars
    activities={
      Array [
        Object {
          "color": "#7d84b2",
          "image": "bed",
          "photo": "bedroom",
          "status": Object {
            "reward": 1,
          },
          "time": Object {
            "goal": 60,
            "max": 120,
            "min": 0,
          },
          "title": "Fazer a cama",
        },
        Object {
          "color": "#0e79b2",
          "image": "toothbrush",
          "time": Object {
            "goal": 10,
            "max": 15,
            "min": 1,
          },
          "title": "Lavar os dentes",
        },
        Object {
          "color": "#7fb800",
          "image": "socks",
          "time": Object {
            "goal": 60,
            "max": 120,
            "min": 10,
          },
          "title": "Vestir",
        },
        Object {
          "color": "#37c1f0",
          "image": "shower",
          "time": Object {
            "goal": 60,
            "max": 120,
            "min": 10,
          },
          "title": "Tomar banho",
        },
        Object {
          "color": "#e43f6f",
          "image": "bag",
          "time": Object {
            "goal": 60,
            "max": 120,
            "min": 10,
          },
          "title": "Preparar a mochila",
        },
        Object {
          "color": "#4bb3fd",
          "image": "sneakers",
          "time": Object {
            "goal": 60,
            "max": 120,
            "min": 10,
          },
          "title": "Calçar os sapatos",
        },
        Object {
          "color": "#ff7f11",
          "image": "breakfast",
          "time": Object {
            "goal": 60,
            "max": 120,
            "min": 10,
          },
          "title": "Tomar o pequeno almoço",
        },
        Object {
          "color": "#b0db43",
          "image": "comb",
          "time": Object {
            "goal": 60,
            "max": 120,
            "min": 10,
          },
          "title": "Pentear cabelo",
        },
      ]
    }
    currentActivity={0}
    increaseProgress={[Function]}
  />
  <Component
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#3db3e2",
        "borderRadius": 30,
        "elevation": 6,
        "flexGrow": 1,
        "marginHorizontal": 180,
        "marginVertical": 120,
        "position": "relative",
      }
    }
  >
    <withAnimatable(Text)
      animation="fadeOut"
      delay={2400}
      direction="normal"
      iterationCount={1}
      iterationDelay={0}
      onAnimationBegin={[Function]}
      onAnimationEnd={[Function]}
      onTransitionBegin={[Function]}
      onTransitionEnd={[Function]}
      style={
        Object {
          "color": "#fff",
          "fontFamily": "LinotteBold",
          "fontSize": 60,
          "marginHorizontal": 30,
          "position": "absolute",
          "textAlign": "center",
          "textShadowColor": "rgba(0, 0, 0, 0.2)",
          "textShadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "textShadowRadius": 3,
          "top": 156,
        }
      }
      useNativeDriver={false}
    >
      Atividade completada!
    </withAnimatable(Text)>
    <RewardModalExperienceBar
      progress={0.3}
    />
    <PastActivityIcons
      activities={
        Array [
          Object {
            "color": "#7d84b2",
            "image": "bed",
            "photo": "bedroom",
            "status": Object {
              "reward": 1,
            },
            "time": Object {
              "goal": 60,
              "max": 120,
              "min": 0,
            },
            "title": "Fazer a cama",
          },
          Object {
            "color": "#0e79b2",
            "image": "toothbrush",
            "time": Object {
              "goal": 10,
              "max": 15,
              "min": 1,
            },
            "title": "Lavar os dentes",
          },
          Object {
            "color": "#7fb800",
            "image": "socks",
            "time": Object {
              "goal": 60,
              "max": 120,
              "min": 10,
            },
            "title": "Vestir",
          },
          Object {
            "color": "#37c1f0",
            "image": "shower",
            "time": Object {
              "goal": 60,
              "max": 120,
              "min": 10,
            },
            "title": "Tomar banho",
          },
          Object {
            "color": "#e43f6f",
            "image": "bag",
            "time": Object {
              "goal": 60,
              "max": 120,
              "min": 10,
            },
            "title": "Preparar a mochila",
          },
          Object {
            "color": "#4bb3fd",
            "image": "sneakers",
            "time": Object {
              "goal": 60,
              "max": 120,
              "min": 10,
            },
            "title": "Calçar os sapatos",
          },
          Object {
            "color": "#ff7f11",
            "image": "breakfast",
            "time": Object {
              "goal": 60,
              "max": 120,
              "min": 10,
            },
            "title": "Tomar o pequeno almoço",
          },
          Object {
            "color": "#b0db43",
            "image": "comb",
            "time": Object {
              "goal": 60,
              "max": 120,
              "min": 10,
            },
            "title": "Pentear cabelo",
          },
        ]
      }
      currentActivity={0}
    />
  </Component>
  <Component
    style={
      Object {
        "alignItems": "center",
        "bottom": 45,
        "elevation": 7,
        "flexDirection": "row",
        "justifyContent": "center",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.8}
      onPress={[MockFunction]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "aspectRatio": 1,
            "borderRadius": 75,
            "elevation": 7,
            "flexDirection": "row",
            "height": 150,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#FFA23D",
            "marginRight": 180,
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          Object {
            "height": "50%",
            "tintColor": "#fff",
            "width": "50%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.8}
      onPress={[MockFunction]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "aspectRatio": 1,
            "borderRadius": 75,
            "elevation": 7,
            "flexDirection": "row",
            "height": 150,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#a4e76f",
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          Object {
            "height": "50%",
            "tintColor": "#fff",
            "width": "50%",
          }
        }
      />
    </TouchableOpacity>
  </Component>
  <RewardSound
    playSounds={false}
    success={true}
  />
</ModalBox>
`;
